[gd_scene load_steps=23 format=3 uid="uid://cfmr7rns8wk2u"]

[ext_resource type="Script" path="res://scripts/prototype_clicker.gd" id="1_457p2"]
[ext_resource type="Texture2D" uid="uid://bes05xamqkoy" path="res://Assets/Background.png" id="2_1sek0"]
[ext_resource type="Texture2D" uid="uid://dvfrowllhnrvh" path="res://Assets/CoffeePotSpriteSheet.png" id="2_a8c04"]
[ext_resource type="Texture2D" uid="uid://crb4k7y2rcjkp" path="res://Assets/buck mone.png" id="2_ij18e"]
[ext_resource type="Texture2D" uid="uid://c2g0cqkibwgsg" path="res://Assets/excelsa bean.png" id="3_hmlnv"]
[ext_resource type="Texture2D" uid="uid://dbgho6fmmfeno" path="res://Assets/Placeholder.png" id="3_t8xqe"]
[ext_resource type="Texture2D" uid="uid://4oeutk26nubr" path="res://Assets/Dark oak Variation 1.png" id="5_yfybp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fld2h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v1d5j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkvn5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ymm6g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mn0r6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l4n1n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_53ddw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_77eia"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3iqsy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_poxa3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p0pxb"]

[sub_resource type="Animation" id="Animation_mh0us"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_a8c04")]
}

[sub_resource type="Animation" id="Animation_snro6"]
resource_name = "coffee_pot_click"
length = 1.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 6, 7, 8, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_jiie6"]
resource_name = "coffee_pot_hover"
loop_mode = 1
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y87yw"]
_data = {
"RESET": SubResource("Animation_mh0us"),
"coffee_pot_click": SubResource("Animation_snro6"),
"coffee_pot_hover": SubResource("Animation_jiie6")
}

[node name="PrototypeClicker" type="Control" node_paths=PackedStringArray("label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_457p2")
label = NodePath("Label")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(577.889, 326.5)
scale = Vector2(0.901389, 0.901389)
texture = ExtResource("2_1sek0")

[node name="Label" type="Label" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(160, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.790799
anchor_top = 0.0493827
anchor_right = 0.980903
anchor_bottom = 0.17284
grow_horizontal = 0
theme_type_variation = &"HeaderLarge"
text = "Money : <value>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Money_Icon" type="Sprite2D" parent="Label"]
texture_filter = 1
position = Vector2(-50.0001, 42)
scale = Vector2(3.03906, 3.03906)
texture = ExtResource("2_ij18e")

[node name="Button" type="Button" parent="."]
visibility_layer = 513
custom_minimum_size = Vector2(160, 140)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.453125
anchor_top = 0.334877
anchor_right = 0.592014
anchor_bottom = 0.557099
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_fld2h")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_v1d5j")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jkvn5")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ymm6g")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mn0r6")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_l4n1n")
theme_override_styles/hover = SubResource("StyleBoxEmpty_53ddw")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_77eia")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3iqsy")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_poxa3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_p0pxb")
metadata/_edit_use_anchors_ = true

[node name="Coffee_Pot" type="Sprite2D" parent="Button"]
texture_filter = 1
position = Vector2(74, 58)
scale = Vector2(0.65625, 0.681014)
texture = ExtResource("2_a8c04")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button/Coffee_Pot"]
libraries = {
"": SubResource("AnimationLibrary_y87yw")
}

[node name="Unlock_Bean" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.037
anchor_right = 0.243
anchor_bottom = 0.123
offset_left = -8.192
offset_top = -15.976
offset_right = 0.0639954
offset_bottom = 0.295998
text = "Unlock Robusta Bean
$500"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.740451
anchor_top = 0.169753
anchor_right = 1.00174
anchor_bottom = 1.00309
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(300, 50)
layout_direction = 1
layout_mode = 2
theme_override_constants/separation = 0

[node name="Upgrade_Excelsa" type="Button" parent="ScrollContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(-0.13, 0)
layout_mode = 2
text = "Excelsa
Current Value: <value>
Upgrade: <value>
Level: <value>"
alignment = 0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/Upgrade_Excelsa"]
layout_mode = 0
offset_top = -43.0
offset_right = 293.0
offset_bottom = 156.0
texture = ExtResource("5_yfybp")

[node name="Excelsa_Upgrade_Icon" type="Sprite2D" parent="ScrollContainer/VBoxContainer/Upgrade_Excelsa"]
texture_filter = 1
position = Vector2(230, 50)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_hmlnv")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Upgrade_Excelsa"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.06
anchor_right = 0.03
anchor_bottom = 0.06
offset_left = 10.0
offset_right = 275.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 13
text = "Excelsa
Current Value: <value>
Upgrade: <value>
Level: <value>"

[node name="Upgrade_Robusta" type="Button" parent="ScrollContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Locked"
alignment = 0

[node name="Robusta_Button_Texture" type="TextureRect" parent="ScrollContainer/VBoxContainer/Upgrade_Robusta"]
texture_filter = 1
offset_top = -43.0
offset_right = 293.0
offset_bottom = 156.0
texture = ExtResource("5_yfybp")

[node name="Robusta_Upgrade_Icon" type="Sprite2D" parent="ScrollContainer/VBoxContainer/Upgrade_Robusta"]
texture_filter = 1
position = Vector2(230, 50)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_t8xqe")

[node name="Upgrade_Arabica" type="Button" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Locked"
alignment = 0

[node name="Arabica_Button_Texture" type="TextureRect" parent="ScrollContainer/VBoxContainer/Upgrade_Arabica"]
texture_filter = 1
offset_top = -43.0
offset_right = 293.0
offset_bottom = 156.0
texture = ExtResource("5_yfybp")

[node name="Arabica_Upgrade_Icon" type="Sprite2D" parent="ScrollContainer/VBoxContainer/Upgrade_Arabica"]
texture_filter = 1
position = Vector2(230, 50)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_t8xqe")

[node name="Upgrade_Liberica" type="Button" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Locked"
alignment = 0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/Upgrade_Liberica"]
texture_filter = 1
offset_top = -43.0
offset_right = 293.0
offset_bottom = 156.0
texture = ExtResource("5_yfybp")

[node name="Liberica_Upgrade_Icon" type="Sprite2D" parent="ScrollContainer/VBoxContainer/Upgrade_Liberica"]
texture_filter = 1
position = Vector2(230, 50)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_t8xqe")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Unlock_Bean" to="." method="_on_unlock_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Upgrade_Excelsa" to="." method="_on_upgrade_excelsa_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Upgrade_Excelsa" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Upgrade_Robusta" to="." method="_on_upgrade_robusta_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Upgrade_Arabica" to="." method="_on_upgrade_arabica_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Upgrade_Liberica" to="." method="_on_upgrade_liberica_pressed"]
